set max-width to 100% to prevent horizontal scrollbar issue

--- a/assets/scss/nhsblocks/style_variations.scss
+++ b/assets/scss/nhsblocks/style_variations.scss
@@ -148,7 +148,7 @@
   left: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
-  max-width: 100vw;
+  max-width: 100%;
   position: relative;
   right: 50%;
   width: 100vw;
